Fixture db/configs have test entries.

--- a/spec/fixtures/postgresql_database.yml
+++ b/spec/fixtures/postgresql_database.yml
@@ -1,6 +1,12 @@
-development:
+common: &common
   adapter: postgresql
   database: test_rails_app
   username: postgres
   password: 
   host: localhost
+
+development:
+  <<: *common
+
+test:
+  <<: *common
