--- a/spec/fixtures/sqlite3_database.yml
+++ b/spec/fixtures/sqlite3_database.yml
@@ -1,5 +1,11 @@
-development:
+common: &common
   adapter: sqlite3
   database: db/development.sqlite3
   pool: 5
   timeout: 5000
+
+development:
+  <<: *common
+
+test:
+  <<: *common
