--- a/spec/fixtures/mysql_database.yml
+++ b/spec/fixtures/mysql_database.yml
@@ -1,7 +1,13 @@
-development:
+common: &common
   database: test_rails_app
   adapter: mysql2
   encoding: utf8
   reconnect: false
   pool: 5
   host: localhost
+
+development:
+  <<: *common
+
+test:
+  <<: *common
